--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="panel summary-panel" id="summary-panel">
             <div class="content full-width-bottom">
                 <h1>The Month in Summary</h1>
-                <p>Sleep debt affects thinking, mood and energy. High screen time keeps the brain alert when it should be winding down.</p>
+                <p>Sleep debt affects thinking, mood and energy. High screen time keeps the brain alert when it should be winding down. After a month, the body adapts in the wrong direction, making recovery slower.</p>
             </div>
         </section>
 
@@ -77,21 +77,21 @@
     
     <div class="faq-section">
         <div class="faq">
-            <div class="faq-header">How to Recover Sleep <span class="arrow">&#9654;</span></div>
+            <div class="faq-header">How to recover sleep <span class="arrow">&#9654;</span></div>
             <div class="faq-content">
-                <p>Focus on consistent bedtimes, reduce screen exposure at night, and allow 7–9 hours of sleep.</p>
+                <p>To recover from sleep debt, it is important to stick to consistent bedtimes, aiming for seven to nine hours of sleep each night.</p>
             </div>
         </div>
         <div class="faq">
-            <div class="faq-header">Effects of Sleep Debt <span class="arrow">&#9654;</span></div>
+            <div class="faq-header">Effects of sleep debt on health <span class="arrow">&#9654;</span></div>
             <div class="faq-content">
-                <p>Chronic sleep loss increases risk of cardiovascular disease, weakens immunity, and heightens stress.</p>
+                <p>Chronic sleep loss can increase the risk of cardiovascular disease, weaken the immune system, and raise stress hormone levels.</p>
             </div>
         </div>
         <div class="faq">
-            <div class="faq-header">Tips for Reducing Screen Time <span class="arrow">&#9654;</span></div>
+            <div class="faq-header">Tips for reducing screen time <span class="arrow">&#9654;</span></div>
             <div class="faq-content">
-                <p>Set device-free hours, use night mode, schedule breaks, and replace evening screen time with relaxing activities.</p>
+                <p>Establish device-free hours in the evening and use night mode to reduce blue light exposure. Schedule regular breaks.</p>
             </div>
         </div>
     </div>
