--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="intro-header">
             <h1>Introduction — Reduced Sleep + High Screen Time</h1>
-            <p>Over one month, chronic sleep reduction paired with high screen exposure causes drops in focus, mood, and energy.</p>
+            <p>Over the course of a month, ongoing sleep reduction combined with high screen exposure leads to noticeable drops in focus, mood, and overall energy. The brain becomes overstimulated while getting less time to properly rest, making it harder to think clearly, regulate emotions, and maintain steady motivation day to day.</p>
         </div>
 
         <div class="timeline-spacer"></div>
@@ -69,7 +69,7 @@
         <section class="panel summary-panel" id="summary-panel">
             <div class="content full-width-bottom">
                 <h1>The Month in Summary</h1>
-                <p>Sleep debt affects thinking, mood and energy. High screen time keeps the brain alert when it should be winding down. After a month, the body adapts in the wrong direction, making recovery slower.</p>
+                <p>Sleep debt affects thinking, mood and overall energy. High screen time, especially in the evenings, keeps the brain alert when it should be winding down. Over the course of a month, these habits start to build on each other. The body begins to adjust in the wrong direction, becoming more awake at night and more tired during the day. This makes recovery slower and means it can take a bit more effort to get back into a healthy routine.</p>
             </div>
         </section>
 
