--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                 <p>Establish device-free hours in the evening and use night mode to reduce blue light exposure. Schedule regular breaks.</p>
             </div>
         </div>
+
+
+        <a href="#" class="download-btn">Download PDF Summary</a>
+        
     </div>
 
     <script src="script.js"></script>
