--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
 
-        <a href="#" class="download-btn">Download PDF Summary</a>
+        <a href="#" class="download-btn">DOWNLOAD OUR APP TODAY</a>
         
     </div>
 
