--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
         
     </div>
 
+
+     <div class="button-container">
+            <a class="store-btn">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg" alt="Download on the App Store">
+            </a>
+            <!-- <a class="store-btn">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg" alt="Download on the App Store">
+            </a> -->
+        </div>
+
     <script src="script.js"></script>
 </body>
 </html>
